Changes in index.html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="container" id="indexContainer">
 <h2>Welcome, {{session['name']}}! </h2>
 <h4>Here you can find 5000 different books titles from different authors. Choose one, write a review and see how others rate the book. Let's get started!</h4> 
-<h4>Search for:</h4>
+<h4>Search for a book:</h4>
 <div  id="search-box">   
     <form class="form-inline w-75" id="search-form" action="/" method="POST">
     <div class="form-check form-check-inline">
